--- a/about.html
+++ b/about.html
@@ -13,10 +13,10 @@
         <!-- Navbar Section -->
         <nav class="navbar">
             <div class="nav-header">
-                <a href="home.html">Heads Up</a>
+                <a href="index.html">Heads Up</a>
             </div>
             <div class="nav-links">
-                <a href="home.html" class="nav-link">Home</a>
+                <a href="index.html" class="nav-link">Home</a>
                 <a href="service.html" class="nav-link">Services</a>
                 <a href="about.html" class="nav-link">About</a>
             </div>
