added google analytics

--- a/public/about.html
+++ b/public/about.html
@@ -8,6 +8,14 @@
     <title>Heads Up</title>
     <link rel="stylesheet" href="styles.css">
     <script src="form_submission.js"></script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-X9CZB466HQ"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+        gtag('config', 'G-X9CZB466HQ');
+    </script>
 </head>
 
 <body>
@@ -29,7 +37,9 @@
             <div class="container">
                 <h1>About Us</h1>
                 <p>
-                    Heads Up is dedicated to promoting better posture and healthy habits through innovative technology. Our mission is to provide an accessible, user-friendly tool that helps you improve posture and wellness with ease.
+                    Heads Up is dedicated to promoting better posture and healthy habits through innovative technology.
+                    Our mission is to provide an accessible, user-friendly tool that helps you improve posture and
+                    wellness with ease.
                 </p>
             </div>
         </section>
