--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,14 @@
     <meta name="google-adsense-account" content="ca-pub-9902529467022088">
     <title>Heads Up</title>
     <link rel="stylesheet" href="styles.css">
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-X9CZB466HQ"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+        gtag('config', 'G-X9CZB466HQ');
+    </script>
 </head>
 
 <body>
