updated google analytics

--- a/public/about.html
+++ b/public/about.html
@@ -9,12 +9,12 @@
     <link rel="stylesheet" href="styles.css">
     <script src="form_submission.js"></script>
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-X9CZB466HQ"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-SNYXC1ET1G"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
-        gtag('config', 'G-X9CZB466HQ');
+        gtag('config', 'G-SNYXC1ET1G');
     </script>
 </head>
 
