--- a/public/index.html
+++ b/public/index.html
@@ -8,12 +8,12 @@
     <title>Heads Up</title>
     <link rel="stylesheet" href="styles.css">
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-X9CZB466HQ"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-SNYXC1ET1G"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
-        gtag('config', 'G-X9CZB466HQ');
+        gtag('config', 'G-SNYXC1ET1G');
     </script>
 </head>
 
