--- a/public/about.html
+++ b/public/about.html
@@ -28,6 +28,7 @@
             <div class="nav-links">
                 <a href="index.html" class="nav-link">Home</a>
                 <a href="service.html" class="nav-link">Services</a>
+                <a href="faq.html" class="nav-link">FAQ</a>
                 <a href="about.html" class="nav-link">About</a>
             </div>
         </nav>
