bad habit history page

--- a/public/faq.html
+++ b/public/faq.html
@@ -20,6 +20,7 @@
                 <a href="service.html" class="nav-link">Services</a>
                 <a href="faq.html" class="nav-link">FAQ</a>
                 <a href="about.html" class="nav-link">About</a>
+                <a href="history.html" class="nav-link">History</a>
             </div>
         </nav>
 
