some personalized rec

--- a/public/history.html
+++ b/public/history.html
@@ -39,6 +39,18 @@
                 <canvas id="historyChart" width="800" height="400"></canvas>
             </div>
         </section>
+        
+        <section class="recommendation-section">
+            <div class="container">
+                <h2>Personalized Tips</h2>
+                <p>Your most frequent issue is <strong>slouching</strong>. Try these tips:</p>
+                <ul>
+                    <li>Adjust your chair height to ensure your back stays straight.</li>
+                    <li>Use a standing desk to improve your posture while working.</li>
+                    <li>Enable hourly posture reminders in the <a href="service.html">Premium Plan</a>.</li>
+                </ul>
+            </div>
+        </section>
 
         <!-- Footer Section -->
         <footer class="footer">
