--- a/public/service.html
+++ b/public/service.html
@@ -76,6 +76,19 @@
             </div>
         </section>
 
+        <section class="upgrade-recommendation">
+            <div class="container">
+                <h2>Recommended Upgrade</h2>
+                <p>You're currently on the Basic Plan. Upgrade to <strong>Premium</strong> for:</p>
+                <ul>
+                    <li>Real-time posture tracking</li>
+                    <li>Customized alerts</li>
+                    <li>Weekly progress reports</li>
+                </ul>
+                <button>Upgrade Now</button>
+            </div>
+        </section>
+        
         <!-- Subscription Plans Section -->
         <section class="service-section">
             <div class="container">
@@ -122,6 +135,7 @@
                 </div>
             </div>
         </section>
+
 
         <!-- Footer Section -->
         <footer class="footer">
